This is the CHANGELOG for amavisd-milter.

20190119:
	The Spamassassin's RDNS_NONE check tests if the rdns field in
	the Received header is empty or "unknown".  Postfix sets
	the {client_name} macro to "unknown" when the FcrDNS check
	fails, but the hostname passed to xxfi_connect is set to
	the IP address which means that RDNS_NONE is never triggered.
	Instead, use {client_name} macro, and only if it is not available
	use the hostname.

	Signed-off-by: Florian Pritz <bluewind@xinu.at>

20190116:
	Removed obsoleted file amavisd-milter.spec.

20190106:
	amavisd-milter moved to GitHub.

20150525:
	Properly eliminate UTF8 characters in nroff output for man2html
	and README.

20150524:
	amavisd-milter-1.6.1:

	Bug and compatibility fixies:
	- Fixed bug when creating amavisd-new policy bank names.

20150524:
	Fixed bug when creating amavisd-new policy bank names.

	Thanks to: Christian Roessner <c@roessner-network-solutions.com>

20130519:
	amavisd-milter-1.6.0:

	New features:
	- Added new amavisd-milter option -B which passes value of
	  {daemon_name} milter macro as amavisd-new policy bank name.

	Bug and compatibility fixies:
	- Added amavisd-milter.spec for compilation with rpmbuild.
	- Fixed typo which prevents using LDFLAGS on Debian.
	- Fixed missing definition of true and false in libmilter/mfapi.h.

20130422:
	Added new amavisd-milter option -B which uses value of {daemon_name}
	milter macro as amavisd-new policy bank name.

	Thanks to: Andreas Schulze

20130125:
	Included amavisd-milter.spec for compilation with rpmbuild.

	Thanks to: Jo Rhett <jrhett@netconsonance.com>

20120727:
	Include stdbool.h before libmilter/mfapi.h in compat/compat.h because
	libmilter/mfapi.h not define true and false.

20101105:
	Fixed typo in aclocal/ax_path_milter.m4 which prevents using LDFLAGS
	on Debian.

        Thanks to: Harald Jenny <harald@a-little-linux-box.at>

20100502:
	amavisd-milter-1.5.0:

	Bug and compatibility fixies: